[package]
name = "loki"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.8", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4.0", features = ["derive"] }
anyhow = { version = "1.0" }

